--- a/inex.html
+++ b/inex.html
@@ -1,4 +1,4 @@
-ss<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,18 @@ ss<!DOCTYPE html>
         <div class="conteudo-titulo">
             <img src="trancar.svg" alt="cadeado fechado">
             <h2 class="titulo-principal">Gerador de senhas</h2>
-            <h3 >s=</h3>
-</body>
-</html>
+            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatóriae e segura</h3>
+        </div>
+        <div class="conteudo-senha">
+            <label for="senha">Senha</label>
+            <input name="senha" type="text" id="campo-senha">
+            </div>
+            <div class="parametro">
+                <h3 class="parametro-titulo">Personaize sua senha</h3>
+                <div class="parametro-coluna__senha">
+                    <div class="parametro-senha">
+                        <h4 class="parametro-senha">Número de caracteres</h4>
+                    </div>
+                    <div class="parametro-senha">
+                        <h4 class="parametro-senha-titulo">Caracteristicas da senha</h4>
+                    </div>
