--- a/inex.html
+++ b/inex.html
@@ -9,7 +9,7 @@
 <body>
     <section class="conteudo">
         <div class="contudo-titulo">
-            <img class="imagem" src="cadeado-aberto.png" alt="cadeado fechado">
+            <img class="imagem" src="image.png" alt="cadeado fechado">
             <h2 class="titulo-principal">Gerador de Senhas</h2>
             <h3 clas="titulo-secundario">Gere uma Senha Aleatória e Segura</h3>
         </div>
